--- a/ResponsiveWebDesign/Survey Form/index.html
+++ b/ResponsiveWebDesign/Survey Form/index.html
@@ -6,69 +6,113 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>freeCodeCamp Survey Form</title>
 </head>
 
 <body>
-
-    <div id="div-main">
-        <div id="title-descrpt">
-            <h1 id="title">Hello world</h1>
-            <p id="description">Description</p>
+    <div id="main-div">
+        <div>
+            <h1>freeCodeCamp Survey Form</h1>
+            <p>Thank you for taking the time to help us improve the platform</p>
         </div>
-
-        <div id="form-container">
-            <form id="survey-form" action="">
-                <div>
-
-                    <label for="name-label">
-                        <input id="name" type="text" placeholder="Ingresa tu nombre" required>
-                    </label>
-                    <label for="email-label">
-                        <input id="email" type="email" placeholder="Ingresa tu email" required>
-                    </label>
-                    <label for="number-label">
-                        <input id="number" type="number" placeholder="Ingresa un numero" min="13" max="120" required>
+        <main>
+            <form action="#" method="#">
+                <div class="div-input">
+                    <label for="name"> Name
+                        <input type="text" name="name" id="name" required>
                     </label>
                 </div>
-
-                <div>
-
-                    <select name="" id="dropdown">
-                        <option value=""></option>
-                        <option value=""></option>
-                        <option value=""></option>
-                        <option value=""></option>
+                <div class="div-input">
+                    <label for="email"> Email
+                        <input type="email" name="email" id="email" required>
+                    </label>
+                </div>
+                <div class="div-input">
+                    <label for="age"> Age <span>(optional)</span>
+                        <input type="number" name="age" id="age" required>
+                    </label>
+                </div>
+                <div class="div-input">
+                    <p>Which option best describes your current role?</p>
+                    <select name="" id="">
+                        <option selected disabled>Select current role</option>
+                        <option value="1">Student</option>
+                        <option value="2">Full Time Job</option>
+                        <option value="3">Full Time Learner</option>
+                        <option value="4">Prefer not to say</option>
+                        <option value="5">Other</option>
                     </select>
                 </div>
-
-                <div>
-
-                    <label for="">
-                        <input type="radio" value="" name="radio-buttons">
+                <div class="div-input">
+                    <p>Would you recommend freeCodeCamp to a friend?</p>
+                    <label for="radio-definitely">
+                        <input type="radio" id="radio-definitely" name="recommendation" value="definitely"> Definitely
                     </label>
-                    <label for="">
-                        <input type="radio" value="" name="radio-buttons">
+                    <label for="radio-maybe">
+                        <input type="radio" id="radio-maybe" name="recommendation" value="maybe"> Maybe
                     </label>
-                </div>
-
-                <div>
-                    <label for="">
-                        <input type="checkbox" name="" value="" id="">
+                    <label for="radio-not-sure">
+                        <input type="radio" id="radio-not-sure" name="recommendation" value="not sure"> Not sure
                     </label>
                 </div>
-
-                <textarea name="" id="" cols="30" rows="10"></textarea>
-
-                <button id="submit">Submit</button>
-
+                <div class="div-input">
+                    <p> What is your favorite feature of freeCodeCamp?</p>
+                    <select name="" id="">
+                        <option disabled selected>Select an option</option>
+                        <option value="1">Challenges</option>
+                        <option value="2">Projects</option>
+                        <option value="3">Community</option>
+                        <option value="4">Open Source</option>
+                    </select>
+                </div>
+                <div class="div-input">
+                    <p>What would you like to see improved? <span>(Check all that apply)</span></p>
+                    <label for="">
+                        <input type="checkbox" id="front-end" name="improvements" value="front-end"> Front-end Projects
+                    </label>
+                    <label for="">
+                        <input type="checkbox" id="back-end" name="improvements" value="back-end"> Back-end Projects
+                    </label>
+                    <label for="">
+                        <input type="checkbox" id="data-visualization" name="improvements" value="data-visualization">
+                        Data Visualization
+                    </label>
+                    <label for="">
+                        <input type="checkbox" id="challenges" name="improvements" value="challenges"> Challenges
+                    </label>
+                    <label for="">
+                        <input type="checkbox" id="open-source-community" name="improvements"
+                            value="open-source-community"> Open Source Community
+                    </label>
+                    <label for="">
+                        <input type="checkbox" id="gitter-help-rooms" name="improvements" value="gitter-help-roomss">
+                        Gitter help rooms
+                    </label>
+                    <label for="">
+                        <input type="checkbox" id="videos" name="improvements" value="videos"> Videos
+                    </label>
+                    <label for="">
+                        <input type="checkbox" id="city-meetups" name="improvements" value="city-meetups"> City Meetups
+                    </label>
+                    <label for="">
+                        <input type="checkbox" id="wiki" name="improvements" value="wiki"> Wiki
+                    </label>
+                    <label for="">
+                        <input type="checkbox" id="forum" name="improvements" value="forum"> Forum
+                    </label>
+                    <label for="">
+                        <input type="checkbox" id="additional-courses" name="improvements" value="additional-courses">
+                        Additional Courses
+                    </label>
+                </div>
+                <div class="div-input">
+                    <p>Any comments or suggestions?</p>
+                    <textarea name="comments" id="" cols="30" rows="10">Enter your comment here...</textarea>
+                </div>
+                <button id="button" type="submit">Submit</button>
             </form>
-        </div>
+        </main>
     </div>
+</body>
 
 </html>
